--- a/UniversityAPI/UniversityAPI.csproj
+++ b/UniversityAPI/UniversityAPI.csproj
@@ -28,6 +28,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+
 	</ItemGroup>
 
 	<ItemGroup>
