--- a/UniversityAPI/appsettings.Development.json
+++ b/UniversityAPI/appsettings.Development.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "very_very_very_very_very_secret_key",
+    "LifeTimeInMinutes": 15,
+    "Issuer": "University",
+    "Audience": "User"
+  },
   "ConnectionStrings": {
-    "University": "Server=localhost, 1455; Database=University; User Id=sa; Password=Secret12345!;TrustServerCertificate=True;Trusted_Connection=False",
-    "UniversityAccounts": "Server=localhost, 1455; Database=UniversityAccounts; User Id=sa; Password=Secret12345!;TrustServerCertificate=True;Trusted_Connection=False;"
+    "UniversityConnectionString": "Server=localhost,1434;Database=UniversityDb;User ID=sa;Password=Secret12345!;TrustServerCertificate=True;"
   }
 }
