Change int id to string ando do some fixes

--- a/UniversityAPI/appsettings.Development.json
+++ b/UniversityAPI/appsettings.Development.json
@@ -12,6 +12,6 @@
     "Audience": "User"
   },
   "ConnectionStrings": {
-    "UniversityConnectionString": "Server=mssql;Database=UniversityDb;User ID=sa;Password=Secret12345!;TrustServerCertificate=True;"
+    "UniversityConnectionString": "Server=localhost,1434;Database=UniversityDb;User ID=sa;Password=Secret12345!;TrustServerCertificate=True;"
   }
 }
