Some fixes plus docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,27 @@
 services:
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: mssql
-    expose:
-      - 1434
-    ports:
-      - 1434:1433
-    environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=Secret12345!
-    volumes:
-      - mssql_volume:/var/opt/mssql 
-    networks:
-      - university_network
-    restart: always
 
   universityapi:
     image: universityapi
     build:
-      context: .
+      context: ./UniversityAPI
       dockerfile: Dockerfile
-    container_name: mvc
+    container_name: webapi
+    expose:
+      - 5000
+    ports:
+      - 5000:8080
+    networks:
+      - university_network
+    depends_on:
+      - mssql
+    restart: always
+
+  universityblazor:
+    image: universityblazor
+    build:
+      context: ./UniversityBlazor
+      dockerfile: Dockerfile
+    container_name: blazor
     expose:
       - 5000
     ports:
